--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,15 +4,15 @@ nav:
     - テスト: test.md
 
 theme:
-#  name: material
-  name: readthedocs
+  name: material
+#  name: readthedocs
   language: 'ja'
 extra:
   search:
     language: 'jp'
 
-markdown_extensions:
- - pymdownx.arithmatex  
-extra_javascript:
- - 'https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-MML-AM_CHTML'
+#markdown_extensions:
+# - pymdownx.arithmatex  
+#extra_javascript:
+# - 'https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-MML-AM_CHTML'
 
