--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,8 +11,8 @@ extra:
   search:
     language: 'jp'
 
-#markdown_extensions:
-# - pymdownx.arithmatex  
-#extra_javascript:
-# - 'https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-MML-AM_CHTML'
+markdown_extensions:
+ - pymdownx.arithmatex  
+extra_javascript:
+ - 'https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-MML-AM_CHTML'
 
